--- a/todo-cli/package.json
+++ b/todo-cli/package.json
@@ -1,11 +1,28 @@
 {
-  "dependencies": {
-    "jest": "^29.0.2",
-    "minimist": "^1.2.6",
-    "pg": "^8.8.0",
-    "sequelize": "^6.21.4"
+  "name": "todo-cli",
+  "version": "1.0.0",
+  "description": "",
+  "main": "todo.js",
+  "devDependencies": {
+    "eslint": "^8.37.0",
+    "husky": "^8.0.3",
+    "jest": "^29.5.0",
+    "lint-staged": "^13.2.0",
+    "prettier": "^2.8.7",
+    "sequelize-cli": "^6.6.0"
   },
   "scripts": {
-    "test": "jest --json --outputFile=results.json --detectOpenHandles"
-  }
+    "db:create:test": "NODE_ENV=test npx sequelize-cli db:create",
+    "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
+    "test": "NODE_ENV=test jest --detectOpenHandles",
+    "prepare": "husky install"
+  },
+  "lint-staged": {
+    "*.js": [
+      "eslint",
+      "prettier --write ."
+    ]
+  },
+  "author": "",
+  "license": "ISC"
 }
