--- a/todo-app/config/config.json
+++ b/todo-app/config/config.json
@@ -1,23 +1,20 @@
 {
   "development": {
     "username": "postgres",
-    "password": "changeme",
-    "database": "wd_todo_dev",
+    "password": "learn@18",
+    "database": "wd-todo-dev",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "test": {
     "username": "postgres",
-    "password": "changeme",
-    "database": "wd_todo_test",
+    "password": "learn@18",
+    "database": "wd-todo-test",
     "host": "127.0.0.1",
     "dialect": "postgres"
   },
   "production": {
-    "username": "root",
-    "password": null,
-    "database": "database_production",
-    "host": "127.0.0.1",
-    "dialect": "mysql"
+    "use_env_variable":"DATABASE_URL",
+    "dialect":"postgres"
   }
 }
