--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon -e js,ejs",
+    "start:prod":"node index.js   ",
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
     "test": "NODE_ENV=test jest --detectOpenHandles",
     "prepare": "cd .. && husky install todo-app/.husky"
@@ -17,6 +19,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "mysql2": "^3.2.0",
     "pg": "^8.10.0",
@@ -27,9 +30,9 @@
     "husky": "^8.0.3",
     "jest": "^29.5.0",
     "lint-staged": "^13.2.1",
+    "nodemon": "^2.0.22",
     "prettier": "^2.8.7",
     "sequelize-cli": "^6.6.0",
     "supertest": "^6.3.3"
   }
 }
-
