--- a/todo-app/.eslintrc.json
+++ b/todo-app/.eslintrc.json
@@ -1,14 +1,17 @@
 {
-  "env": {
-    "browser": true,
-    "commonjs": true,
-    "es2021": true,
-    "jest": true
-  },
-  "extends": "eslint:recommended",
-  "overrides": [],
-  "parserOptions": {
-    "ecmaVersion": "latest"
-  },
-  "rules": {}
+    "env": {
+        "browser": true,
+        "es2021": true,
+        "node ": true,
+        "jest" : true
+    },
+    "extends": "eslint:recommended",
+    "overrides": [
+    ],
+    "parserOptions": {
+        "ecmaVersion": "latest",
+        "sourceType": "module"
+    },
+    "rules": {
+    }
 }
