--- a/todo-app/package.json
+++ b/todo-app/package.json
@@ -7,9 +7,9 @@
     "start": "nodemon -e js,ejs",
     "start:prod": "node index.js   ",
     "pretest": "NODE_ENV=test npx sequelize-cli db:drop && NODE_ENV=test npx sequelize-cli db:create",
-    "clean:start":"npm run pretest && NODE_ENV=test npm start",
+    "clean:start": "npm run pretest && NODE_ENV=test npm start",
     "prepare": "cd .. && husky install todo-app/.husky",
-    "cy:test":"npx cypress run"
+    "cy:test": "npx cypress run"
   },
   "lint-staged": {
     "*.js": [
@@ -20,6 +20,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
     "bcrypt": "^5.1.0",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
@@ -29,6 +30,7 @@
     "express": "^4.18.2",
     "express-session": "^1.17.3",
     "mysql2": "^3.2.0",
+    "node": "^18.20.2",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "pg": "^8.10.0",
